--- a/gesturesNew/Base.lproj/Main.storyboard
+++ b/gesturesNew/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dyy-qb-lg6">
+                                <rect key="frame" x="16" y="106" width="136" height="127"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="mn1-De-s0m" appends="YES" id="9r9-5f-BhG"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cj6-TD-5ux">
+                                <rect key="frame" x="16" y="466" width="136" height="128"/>
+                                <color key="backgroundColor" red="1" green="0.75706007904693839" blue="0.21045860390994331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <gestureRecognizers/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Dyy-qb-lg6" secondAttribute="trailing" constant="223" id="5Gx-bu-MRx"/>
+                            <constraint firstItem="Dyy-qb-lg6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HYC-Jm-kW8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Cj6-TD-5ux" secondAttribute="bottom" constant="73" id="KF1-z1-5ig"/>
+                            <constraint firstItem="Dyy-qb-lg6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="86" id="VHj-s9-YiK"/>
+                            <constraint firstAttribute="bottom" secondItem="Dyy-qb-lg6" secondAttribute="bottom" constant="434" id="gYC-jF-ESg"/>
+                            <constraint firstItem="Dyy-qb-lg6" firstAttribute="trailing" secondItem="Cj6-TD-5ux" secondAttribute="trailing" id="ly6-m9-WMh"/>
+                            <constraint firstItem="Cj6-TD-5ux" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="466" id="soM-Wb-SVl"/>
+                            <constraint firstItem="Dyy-qb-lg6" firstAttribute="leading" secondItem="Cj6-TD-5ux" secondAttribute="leading" id="tkg-j8-a1J"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="view2" destination="Dyy-qb-lg6" id="RDO-1Q-kDy"/>
+                        <outlet property="view3" destination="Cj6-TD-5ux" id="Ui0-Vl-tKG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="mn1-De-s0m">
+                    <connections>
+                        <action selector="panGesture:" destination="BYZ-38-t0r" id="Lff-EV-pqj"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
